avances login y signup

--- a/EcoWEB/Apps/Usuarios/templates/index.html
+++ b/EcoWEB/Apps/Usuarios/templates/index.html
@@ -31,52 +31,31 @@
     <header class="header_section">
       <div class="container-fluid">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
-          <a class="navbar-brand" href="index.html">
+          <a class="navbar-brand" href="">
             <img src="static/images/logo.png" alt="">
-            <span>
-              Petology
-            </span>
+            <span>MARKETECO</span>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-
+    
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <div class="d-flex mx-auto flex-column flex-lg-row align-items-center">
-              <ul class="navbar-nav  ">
-                <li class="nav-item active">
-                  <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="service.html">service </a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="pet.html">Pet's gallery </a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="clinic.html"> clinic</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Contact us</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="buy.html"> Buy now </a>
-                </li>
-              </ul>
-              <form class="form-inline my-2 my-lg-0 ml-0 ml-lg-4 mb-3 mb-lg-0">
-                <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit"></button>
+              <form class="form-inline my-2 my-lg-0 mx-auto">
+                <input class="form-control mr-sm-2" type="search" placeholder="Buscar producto" aria-label="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">BUSCAR</button>
               </form>
             </div>
-            <div class="quote_btn-container  d-flex justify-content-center">
-              <a href="">
-                Call: +01 1234567890
-              </a>
-            </div>
           </div>
+          <a class="navbar-brand" href="usuarios/login">
+            <img src="static/images/logo.png" alt="">
+            <span>LOGIN</span>
+          </a>
         </nav>
       </div>
     </header>
+    
     <!-- end header section -->
     <!-- slider section -->
     <section class=" slider_section position-relative">
@@ -334,59 +313,6 @@
 
   <!-- end service section -->
 
-
-
-  <!-- gallery section -->
-  <section class="gallery-section layout_padding">
-    <div class="container">
-      <h2>
-        Our Gallery
-      </h2>
-    </div>
-    <div class="container ">
-      <div class="img_box box-1">
-        <img src="static/images/g-1.png" alt="">
-      </div>
-      <div class="img_box box-2">
-        <img src="static/images/g-2.png" alt="">
-      </div>
-      <div class="img_box box-3">
-        <img src="static/images/g-3.png" alt="">
-      </div>
-      <div class="img_box box-4">
-        <img src="static/images/g-4.png" alt="">
-      </div>
-      <div class="img_box box-5">
-        <img src="static/images/g-5.png" alt="">
-      </div>
-    </div>
-  </section>
-
-
-
-  <!-- end gallery section -->
-
-  <!-- buy section -->
-
-  <section class="buy_section layout_padding">
-    <div class="container">
-      <h2>
-        You Can Buy Pet From Our Clinic
-      </h2>
-      <p>
-        consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-      </p>
-      <div class="d-flex justify-content-center">
-        <a href="">
-          Buy Now
-        </a>
-      </div>
-    </div>
-  </section>
-
-  <!-- end buy section -->
-
   <!-- client section -->
   <section class="client_section layout_padding-bottom">
     <div class="container">
@@ -576,8 +502,7 @@
   <!-- footer section -->
   <section class="container-fluid footer_section">
     <p>
-      &copy; 2019 All Rights Reserved By
-      <a href="https://html.design/">Free Html Templates</a>
+      &copy; 2024 All Rights Reserved </a>
     </p>
   </section>
   <!-- footer section -->
@@ -597,7 +522,7 @@
         },
       });
 
-      var image = 'images/maps-and-flags.png';
+      var image = 'maps-and-flags.png';
       var beachMarker = new google.maps.Marker({
         position: {
           lat: 40.645037,
