--- a/EcoWEB/Apps/Usuarios/templates/login.html
+++ b/EcoWEB/Apps/Usuarios/templates/login.html
@@ -1,18 +1,120 @@
-<!-- login.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <!-- Basic -->
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <!-- Mobile Metas -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <!-- Site Metas -->
+    <meta name="keywords" content="" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <title>LOGIN</title>
+    <!-- slider stylesheet -->
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css" />
+    <!-- bootstrap core css -->
+    <link rel="stylesheet" type="text/css" href="/../static/css/bootstrap.css"/>
+    <!-- fonts style -->
+    <link href="https://fonts.googleapis.com/css?family=Dosis:400,500|Poppins:400,700&display=swap" rel="stylesheet">
+    <!-- Custom styles for this template -->
+    <link href="/../static/css/style.css" rel="stylesheet" />
+    <!-- responsive style -->
+    <link href="/../static/css/responsive.css" rel="stylesheet" />
+    <style>
+        /* Estilos para el formulario de inicio de sesión */
+        body, html {
+            height: 100%; 
+            margin: 0; /* Elimina los márgenes predeterminados */
+            font-family: Arial, sans-serif; /* Usa una fuente genérica */
+        }
+
+        .container_login {
+            background-color: #f6f8f7;
+            height: 100vh; 
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .login_form {
+            width: 100%;
+            padding: 20px;
+            margin: 300px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            background-color: #f6f8f7;
+        }
+
+        .login_form h2 {
+            text-align: center;
+            margin-bottom: 20px;
+            color: #023b48;
+        }
+
+        .login_form input[type="text"],
+        .login_form input[type="password"],
+        .login_form button[type="submit"] {
+            width: calc(100% - 22px); 
+            padding: 10px;
+            margin-bottom: 20px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            box-sizing: border-box; 
+        }
+
+        .login_form button[type="submit"] {
+            background-color: #3d8a4f;
+            color: #ffffff;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        .login_form button[type="submit"]:hover {
+            background-color: #2c6b3a; 
+        }
+
+        /* footer section*/
+
+        .footer_section_login {
+        background-color: #fbfdfd;
+        padding: 20px;
+        font-weight: 500;
+        }
+
+        .footer_section_login p {
+        color: #292929;
+        margin: 0;
+        text-align: center;
+        }
+
+        .footer_section_login a {
+        color: #292929;
+        }
+
+        /* end footer section*/
+
+    </style>
 </head>
 <body>
-    <h2>Iniciar sesión</h2>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Iniciar sesión</button>
-    </form>
+    <div class="container_login">
+        <div class="login_form">
+            <h2>Iniciar sesión</h2>
+            <form method="post">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <button type="submit">Iniciar sesión</button>
+                <a href="{% url 'social:begin' 'google-oauth2' %}">Iniciar sesión con Google</a>
+            </form>
+        </div>
+    </div>
+      <!-- footer section -->
+    <section class="container-fluid footer_section_login">
+        <p>
+        &copy; 2024 All Rights Reserved </a>
+        </p>
+    </section>
+    <!-- footer section -->
 </body>
+
 </html>
