--- a/EcoWEB/static/css/style.scss
+++ b/EcoWEB/static/css/style.scss
@@ -136,15 +136,11 @@ a:focus {
   color: #fafcfd;
 }
 
-.custom_nav-container .nav_search-btn {
-  background-image: url(../images/search-icon.png);
-  background-size: 22px;
-  background-repeat: no-repeat;
-  background-position-y: 7px;
-  width: 35px;
-  height: 35px;
-  padding: 0;
-  border: none;
+.navbar-login,
+.navbar-login:hover {
+  @include upperBold;
+  font-size: 24px;
+  color: #fafcfd;
 }
 
 .navbar-brand {
@@ -165,6 +161,25 @@ a:focus {
   margin-top: 5px;
 }
 
+.navbar-login {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.navbar-login img {
+  width: 30px;
+  margin-right: 5px;
+}
+
+.navbar-login span {
+  font-size: 20px;
+  font-weight: 700;
+  color: #191919;
+  margin-top: 5px;
+}
+
+
 .custom_nav-container {
   z-index: 99999;
   padding: 5px 0;
@@ -178,6 +193,7 @@ a:focus {
   background-image: url(../images/menu.png);
   background-size: 55px;
 }
+
 
 /*end header section*/
 
@@ -312,56 +328,6 @@ a:focus {
 }
 
 // end service section
-
-// gallery section
-.gallery-section {
-  background-color: $primary2;
-  .container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: stretch;
-    h2 {
-      color: $white;
-    }
-  }
-  .img_box {
-    margin: 15px 0;
-    img {
-      width: 100%;
-      height: 100%;
-    }
-    &.box-1 {
-      width: 28%;
-    }
-    &.box-2 {
-      width: 70%;
-    }
-    &.box-3 {
-      width: 32%;
-    }
-    &.box-4 {
-      width: 32%;
-    }
-    &.box-5 {
-      width: 32%;
-    }
-  }
-}
-
-// end gallery section
-
-// buy section
-.buy_section {
-  text-align: center;
-  p {
-    margin: 25px 0;
-  }
-  a {
-    @include hero_btn($btnColor, $white, 12px, 65px);
-  }
-}
-// end buy section
 
 // client section
 .client_section {
