--- a/EcoWEB/Apps/Usuarios/templates/index.html
+++ b/EcoWEB/Apps/Usuarios/templates/index.html
@@ -48,10 +48,17 @@
               </form>
             </div>
           </div>
+          {% if user.is_authenticated %}
+          <a class="navbar-brand" href="perfil">
+            <img src="static/images/logo.png" alt="">
+            <span>{{user.username}}</span>
+          </a>
+          {% else %}
           <a class="navbar-brand" href="usuarios/login">
             <img src="static/images/logo.png" alt="">
             <span>LOGIN</span>
           </a>
+          {% endif %}
         </nav>
       </div>
     </header>
@@ -416,7 +423,6 @@
   <section class="map_section">
     <div id="map" class="h-100 w-100 ">
     </div>
-
     <div class="form_container ">
       <div class="row">
         <div class="col-md-8 col-sm-10 offset-md-4">
@@ -446,7 +452,6 @@
           </form>
         </div>
       </div>
-    </div>
     </div>
   </section>
 
@@ -522,7 +527,7 @@
         },
       });
 
-      var image = 'maps-and-flags.png';
+      var image = 'static/images/logo.png';
       var beachMarker = new google.maps.Marker({
         position: {
           lat: 40.645037,
