--- a/EcoWEB/Apps/Usuarios/templates/login.html
+++ b/EcoWEB/Apps/Usuarios/templates/login.html
@@ -74,6 +74,24 @@
             background-color: #2c6b3a; 
         }
 
+        .btn {
+            width: calc(100% - 22px); 
+            padding: 10px;
+            margin-bottom: 20px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            box-sizing: border-box; 
+            background-color: #3d8a4f;
+            color: #ffffff;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        .btn:hover {
+            background-color: #2c6b3a; 
+        }
+
+
         /* footer section*/
 
         .footer_section_login {
@@ -99,13 +117,22 @@
 <body>
     <div class="container_login">
         <div class="login_form">
+        {% load socialaccount %}
+        {% if user.is_authenticated %}
+        <h2>Estás registrado como {{user.username}}</h2>
+        <a href="/usuarios/signup/logout" class="btn">Salir de la cuenta de {{user.username}}</a>
+        {% else %}
             <h2>Iniciar sesión</h2>
             <form method="post">
                 {% csrf_token %}
                 {{ form.as_p }}
                 <button type="submit">Iniciar sesión</button>
-                <a href="{% url 'social:begin' 'google-oauth2' %}">Iniciar sesión con Google</a>
             </form>
+            <div>
+                <h2>¿No estás registrado?</h2>
+                <a href="/usuarios/signup" class="btn">Registrar</a>
+            </div>
+        {% endif %} 
         </div>
     </div>
       <!-- footer section -->
