--- a/EcoWEB/Apps/Usuarios/templates/signup_consumidor.html
+++ b/EcoWEB/Apps/Usuarios/templates/signup_consumidor.html
@@ -74,6 +74,23 @@
             background-color: #2c6b3a; 
         }
 
+        .btn {
+            width: calc(100% - 22px); 
+            padding: 10px;
+            margin-bottom: 20px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            box-sizing: border-box; 
+            background-color: #3d8a4f;
+            color: #ffffff;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        .btn:hover {
+            background-color: #2c6b3a; 
+        }
+
         /* footer section*/
 
         .footer_section_signup {
@@ -103,12 +120,18 @@
             <form method="post">
                 {% csrf_token %}
                 {{ form.as_p }}
-                <button type="submit">Sign Up</button>
+                <button type="submit">Registrar</button> 
+                {% load socialaccount %}
+                {% if user.is_authenticated %}
+                <a href="/usuarios/signup/logout" class="btn">Salir de la cuenta de {{user.username}}</a>
+                {% else %}
+                <a href="{% provider_login_url 'google' %}?next=/" class="btn">Registrar con Google</a>
+                {% endif %}
             </form>
         </div>
     </div>
       <!-- footer section -->
-      <section class="container-fluid footer_section_login">
+      <section class="container-fluid footer_section_signup">
         <p>
         &copy; 2024 All Rights Reserved </a>
         </p>
