--- a/EcoWEB/Apps/Usuarios/templates/index.html
+++ b/EcoWEB/Apps/Usuarios/templates/index.html
@@ -22,10 +22,22 @@
   <link href="static/css/style.css" rel="stylesheet" />
   <!-- responsive style -->
   <link href="static/css/responsive.css" rel="stylesheet" />
+  <!-- SweetAlert -->
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 </head>
 
 
 <body>
+  <!-- Mostrar mensajes de Django -->
+  {% if messages %}
+  <div id="popup-messages" style="display: none;">
+      {% for message in messages %}
+      <div class="alert alert-{{ message.tags }}">{{ message }}</div>
+      {% endfor %}
+  </div>
+  {% endif %}
+  <!-- Mostrar mensajes de Django -->
+
   <div class="hero_area">
     <!-- header section strats -->
     <header class="header_section">
@@ -49,7 +61,7 @@
             </div>
           </div>
           {% if user.is_authenticated %}
-          <a class="navbar-brand" href="perfil">
+          <a class="navbar-brand" href="usuarios/perfil">
             <img src="static/images/logo.png" alt="">
             <span>{{user.username}}</span>
           </a>
@@ -511,6 +523,36 @@
     </p>
   </section>
   <!-- footer section -->
+
+  <script>
+    // Mostrar el popup con SweetAlert
+    window.onload = function() {
+        var popupMessages = document.getElementById('popup-messages');
+        if (popupMessages && popupMessages.children.length > 0) {
+            Swal.fire({
+                icon: 'success',  // Cambia esto según el tipo de mensaje: 'success', 'error', 'warning', 'info', 'question'
+                title: 'Notificación',
+                html: popupMessages.innerHTML,
+            });
+        }
+    }
+  </script>
+
+
+  <script>
+    // Mostrar el popup con SweetAlert
+    window.onload = function() {
+        var popupMessages = document.getElementById('popup-messages');
+        if (popupMessages && popupMessages.children.length > 0) {
+            Swal.fire({
+                icon: 'success',  // tipo de mensaje: 'success', 'error', 'warning', 'info', 'question'
+                title: '¡ÉXITO!',
+                html: popupMessages.innerHTML,
+            });
+        }
+    }
+  </script>
+
 
   <script type="text/javascript" src="static/js/jquery-3.4.1.min.js"></script>
   <script type="text/javascript" src="static/js/bootstrap.js"></script>
