--- a/EcoWEB/Apps/Usuarios/templates/index.html
+++ b/EcoWEB/Apps/Usuarios/templates/index.html
@@ -519,25 +519,10 @@
   <!-- footer section -->
   <section class="container-fluid footer_section">
     <p>
-      &copy; 2024 All Rights Reserved </a>
+      &copy;  2024 MARKETECO - Universidad de Sevilla </a>
     </p>
   </section>
   <!-- footer section -->
-
-  <script>
-    // Mostrar el popup con SweetAlert
-    window.onload = function() {
-        var popupMessages = document.getElementById('popup-messages');
-        if (popupMessages && popupMessages.children.length > 0) {
-            Swal.fire({
-                icon: 'success',  // Cambia esto según el tipo de mensaje: 'success', 'error', 'warning', 'info', 'question'
-                title: 'Notificación',
-                html: popupMessages.innerHTML,
-            });
-        }
-    }
-  </script>
-
 
   <script>
     // Mostrar el popup con SweetAlert
