--- a/EcoWEB/Apps/Usuarios/templates/login.html
+++ b/EcoWEB/Apps/Usuarios/templates/login.html
@@ -140,7 +140,7 @@
       <!-- footer section -->
     <section class="container-fluid footer_section_login">
         <p>
-        &copy; 2024 All Rights Reserved </a>
+        &copy;  2024 MARKETECO - Universidad de Sevilla </a>
         </p>
     </section>
     <!-- footer section -->
