--- a/EcoWEB/Apps/Usuarios/templates/perfil.html
+++ b/EcoWEB/Apps/Usuarios/templates/perfil.html
@@ -25,7 +25,7 @@
     <!-- SweetAlert -->
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
   <style>
-    /* Estilos para el formulario de inicio de sesión */
+    /* Estilos para el formulario de perfil */
     body, html {
         height: 100%; 
         margin: 0; /* Elimina los márgenes predeterminados */
@@ -54,13 +54,7 @@
         margin-bottom: 20px;
         color: #023b48;
     }
-    
-    .campo {
-        width: 100%;
-        border: 1px solid #ddd;
-        border-radius: 5px;
-        background-color: #f6f8f7;
-    }
+
 /* 
     .login_form input[type="text"],
     .login_form input[type="password"],
@@ -137,9 +131,12 @@
     <div class="container_perfil">
         <div class="perfil_form">
             <h1>Perfil de Usuario</h1>
-            <p class="campo"><strong>Nombre:</strong> {{ user.username }}</p>
+            <p><strong>Nombre:</strong> {{ user.first_name }}</p>
+            <p><strong>Apellidos:</strong> {{ user.last_name }}</p>
             <p><strong>Email:</strong> {{ user.email }}</p>
             <p><strong>Dirección:</strong> {{ user.direccion }}</p>
+            <p><strong>Teléfono:</strong> {{ user.telefono }}</p>
+            <p><strong>Fecha de Alta:</strong> {{ user.fecha_alta }}</p>
             <p>
                 <strong>Foto de Perfil:</strong>
                 {% if user.photo %}
@@ -148,7 +145,7 @@
                     No has subido una foto de perfil.
                 {% endif %}
             </p>
-            <a href="{% url 'edit_profile' %}">Editar Perfil</a>
+            <a href="{% url 'edit_profile' %}" class="btn">Editar Perfil</a>
         </div>
     </div>
 
