social_login ajustado y perfil en proceso

--- a/EcoWEB/Apps/Usuarios/templates/login.html
+++ b/EcoWEB/Apps/Usuarios/templates/login.html
@@ -133,6 +133,8 @@
             <div>
                 <h2>¿No estás registrado?</h2>
                 <a href="/usuarios/signup" class="btn">Registrar</a>
+                {% load socialaccount %}
+                <a href="/accounts/google/login/" class="btn">Iniciar sesión con Google</a>
             </div>
         {% endif %} 
         </div>
