--- a/EcoWEB/Apps/Usuarios/templates/login.html
+++ b/EcoWEB/Apps/Usuarios/templates/login.html
@@ -129,12 +129,13 @@
                 {% csrf_token %}
                 {{ form.as_p }}
                 <button type="submit">Iniciar sesión</button>
+                <p><a href="{% url 'password_reset' %}">Olvidé mi contraseña</a></p>
             </form>
             <div>
                 <h2>¿No estás registrado?</h2>
                 <a href="/usuarios/signup" class="btn">Registrar</a>
                 {% load socialaccount %}
-                <a href="/accounts/google/login/" class="btn">Iniciar sesión con Google</a>
+                <a href="/accounts/google/login/?next=/usuarios/firebase_register/" class="btn">Iniciar sesión con Google</a>
             </div>
         {% endif %} 
         </div>
