--- a/EcoWEB/Apps/Usuarios/templates/password_reset_done.html
+++ b/EcoWEB/Apps/Usuarios/templates/password_reset_done.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>LOGIN</title>
+    <title>RESTABLECER CONTRASEÑA</title>
     <!-- slider stylesheet -->
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css" />
     <!-- bootstrap core css -->
@@ -21,6 +21,7 @@
     <link href="/../static/css/style.css" rel="stylesheet" />
     <!-- responsive style -->
     <link href="/../static/css/responsive.css" rel="stylesheet" />
+
     <style>
         /* Estilos para el formulario de inicio de sesión */
         body, html {
@@ -29,15 +30,15 @@
             font-family: Arial, sans-serif; /* Usa una fuente genérica */
         }
 
-        .container_signup {
+        .container_login {
             background-color: #f6f8f7;
             height: 100vh; 
             display: flex;
             justify-content: center;
             align-items: center;
         }
-
-        .sign_up_form {
+/* 
+        .login_form {
             width: 100%;
             padding: 20px;
             margin: 300px;
@@ -46,15 +47,15 @@
             background-color: #f6f8f7;
         }
 
-        .sign_up_form h2 {
+        .login_form h2 {
             text-align: center;
             margin-bottom: 20px;
             color: #023b48;
         }
 
-        .sign_up_form input[type="text"],
-        .sign_up_form input[type="password"],
-        .sign_up_form button[type="submit"] {
+        .login_form input[type="text"],
+        .login_form input[type="password"],
+        .login_form button[type="submit"] {
             width: calc(100% - 22px); 
             padding: 10px;
             margin-bottom: 20px;
@@ -63,16 +64,16 @@
             box-sizing: border-box; 
         }
 
-        .sign_up_form button[type="submit"] {
+        .login_form button[type="submit"] {
             background-color: #3d8a4f;
             color: #ffffff;
             cursor: pointer;
             transition: background-color 0.3s ease;
         }
 
-        .sign_up_form button[type="submit"]:hover {
+        .login_form button[type="submit"]:hover {
             background-color: #2c6b3a; 
-        }
+        } */
 
         .btn {
             width: calc(100% - 22px); 
@@ -91,51 +92,51 @@
             background-color: #2c6b3a; 
         }
 
+
         /* footer section*/
 
-        .footer_section_signup {
+        .footer_section_login {
         background-color: #fbfdfd;
         padding: 20px;
         font-weight: 500;
         }
 
-        .footer_section_signup p {
+        .footer_section_login p {
         color: #292929;
         margin: 0;
         text-align: center;
         }
 
-        .footer_section_signup a {
+        .footer_section_login a {
         color: #292929;
         }
 
         /* end footer section*/
 
     </style>
+    <script>
+        // Función para redirigir después de 5 segundos
+        function redirectAfterDelay() {
+            setTimeout(function() {
+                window.location.href = "/usuarios/login";
+            }, 4000); // 4000 milisegundos = 4 segundos
+        }
+    </script>
 </head>
-<body>
-    <div class="container_signup">
-        <div class="sign_up_form">
-            <h2>Regístrate en esta maravillosa web</h2>
-            <form method="post">
-                {% csrf_token %}
-                {{ form.as_p }}
-                <button type="submit">Registrar</button> 
-                {% if user.is_authenticated %}
-                <a href="/usuarios/signup/logout" class="btn">Salir de la cuenta de {{user.username}}</a>
-                {% else %}
-                {% load socialaccount %}
-                <a href="/accounts/google/login/?next=/usuarios/firebase_register/" class="btn">Registrar con Google</a>
-                {% endif %}
-            </form>
-        </div>
+<body onload="redirectAfterDelay()">
+    <div class="container_login">
+            <p>
+                Se ha enviado un email para reestablecer la contraseña. Revisa tu buzón de correo.
+            </p>
     </div>
-    <!-- footer section -->
-    <section class="container-fluid footer_section_signup">
+      <!-- footer section -->
+    <section class="container-fluid footer_section_login">
         <p>
         &copy;  2024 MARKETECO - Universidad de Sevilla </a>
         </p>
     </section>
     <!-- footer section -->
+    
 </body>
+
 </html>
