--- a/EcoWEB/Apps/Usuarios/templates/perfil.html
+++ b/EcoWEB/Apps/Usuarios/templates/perfil.html
@@ -1,4 +1,3 @@
-<!-- templates/perfil.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,7 +10,7 @@
     <meta name="keywords" content="" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>LOGIN</title>
+    <title>PERFIL</title>
     <!-- slider stylesheet -->
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css" />
     <!-- bootstrap core css -->
@@ -23,102 +22,85 @@
     <!-- responsive style -->
     <link href="/../static/css/responsive.css" rel="stylesheet" />
     <!-- SweetAlert -->
-  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
-  <style>
-    /* Estilos para el formulario de perfil */
-    body, html {
-        height: 100%; 
-        margin: 0; /* Elimina los márgenes predeterminados */
-        font-family: Arial, sans-serif; /* Usa una fuente genérica */
-    }
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+    <style>
+        /* Estilos para el formulario de perfil */
+        body, html {
+            height: 100%; 
+            margin: 0; 
+            font-family: Arial, sans-serif; 
+            justify-content: center;
+            align-items: center;
+        }
 
-    .container_perfil {
-        background-color: #f6f8f7;
-        height: 100vh; 
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
+        .container_perfil {
+            background-color: #f6f8f7;
+            height: 100vh; 
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
 
-     .perfil_form {
-        width: 100%;
-        padding: 20px;
-        margin: 300px;
-        border: 1px solid #ddd;
-        border-radius: 5px;
-        background-color: #f6f8f7;
-    }
+        .perfil_form {
+            width: 100%;
+            padding: 20px;
+            margin: 300px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            background-color: #f6f8f7;
+        }
 
-    .perfil_form h2 {
-        text-align: center;
-        margin-bottom: 20px;
-        color: #023b48;
-    }
+        .perfil_form h2 {
+            text-align: center;
+            margin-bottom: 20px;
+            color: #023b48;
+        }
 
-/* 
-    .login_form input[type="text"],
-    .login_form input[type="password"],
-    .login_form button[type="submit"] {
-        width: calc(100% - 22px); 
-        padding: 10px;
-        margin-bottom: 20px;
-        border: 1px solid #ddd;
-        border-radius: 5px;
-        box-sizing: border-box; 
-    }
+        .btn {
+            width: calc(100% - 22px); 
+            padding: 10px;
+            margin: 20px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            box-sizing: border-box; 
+            background-color: #3d8a4f;
+            color: #ffffff;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
 
-    .login_form button[type="submit"] {
-        background-color: #3d8a4f;
-        color: #ffffff;
-        cursor: pointer;
-        transition: background-color 0.3s ease;
-    }
+        .btn:hover {
+            background-color: #2c6b3a; 
+        }
 
-    .login_form button[type="submit"]:hover {
-        background-color: #2c6b3a; 
-    } */
+        .button_group {
+            display: flex;
+            justify-content: center;
+        }
 
-    .btn {
-        width: calc(100% - 22px); 
-        padding: 10px;
-        margin-bottom: 20px;
-        border: 1px solid #ddd;
-        border-radius: 5px;
-        box-sizing: border-box; 
-        background-color: #3d8a4f;
-        color: #ffffff;
-        cursor: pointer;
-        transition: background-color 0.3s ease;
-    }
+        /* footer section */
+        .footer_section_perfil {
+            background-color: #fbfdfd;
+            padding: 20px;
+            font-weight: 500;
+        }
 
-    .btn:hover {
-        background-color: #2c6b3a; 
-    }
+        .footer_section_perfil p {
+            color: #292929;
+            margin: 0;
+            text-align: center;
+        }
 
+        .footer_section_perfil a {
+            color: #292929;
+        }
 
-    /* footer section*/
+        /* end footer section */
 
-    .footer_section_perfil {
-    background-color: #fbfdfd;
-    padding: 20px;
-    font-weight: 500;
-    }
-
-    .footer_section_perfil p {
-    color: #292929;
-    margin: 0;
-    text-align: center;
-    }
-
-    .footer_section_perfil a {
-    color: #292929;
-    }
-
-    /* end footer section*/
-
-</style>
+    </style>
 </head>
 <body>
+    
     <!-- Mostrar mensajes de Django -->
     {% if messages %}
     <div id="popup-messages" style="display: none;">
@@ -128,11 +110,12 @@
     </div>
     {% endif %}
     <!-- Mostrar mensajes de Django -->
+
     <div class="container_perfil">
         <div class="perfil_form">
-            <h1>Perfil de Usuario</h1>
-            <p><strong>Nombre:</strong> {{ user.first_name }}</p>
-            <p><strong>Apellidos:</strong> {{ user.last_name }}</p>
+            <h2>Perfil de Usuario</h2>
+            <p><strong>Nombre:</strong> {{ user.nombre }}</p>
+            <p><strong>Apellidos:</strong> {{ user.apellidos }}</p>
             <p><strong>Email:</strong> {{ user.email }}</p>
             <p><strong>Dirección:</strong> {{ user.direccion }}</p>
             <p><strong>Teléfono:</strong> {{ user.telefono }}</p>
@@ -140,13 +123,17 @@
             <p>
                 <strong>Foto de Perfil:</strong>
                 {% if user.photo %}
-                    <img src="{{ user.photo.url }}" alt="Foto de Perfil" width="150">
+                    <img src="{{ user.photo.url }}" alt="Foto de Perfil" width="200">
                 {% else %}
                     No has subido una foto de perfil.
                 {% endif %}
             </p>
+
             <a href="{% url 'edit_profile' %}" class="btn">Editar Perfil</a>
-            <a href="/usuarios/signup/logout" class="btn">Salir de la cuenta de {{user.username}}</a>
+            <div class="button_group">
+                <a href="/" class="btn btn_back">Volver a Inicio</a>
+                <a href="/usuarios/signup/logout" class="btn">Salir de la cuenta de {{ user.username }}</a>
+            </div>
         </div>
     </div>
 
