--- a/EcoWEB/Apps/Usuarios/templates/index.html
+++ b/EcoWEB/Apps/Usuarios/templates/index.html
@@ -62,8 +62,9 @@
           </div>
           {% if user.is_authenticated %}
           <a class="navbar-brand" href="usuarios/perfil">
-            <img src="static/images/logo.png" alt="">
-            <span>{{user.username}}</span>
+            <!-- <img src="static/images/logo.png" alt=""> -->            
+            <img src="{{ user.photo.url }}" alt="Foto de Perfil" style="width: 80px; height: 80px; border-radius: 50%;">            
+            <span>{{ user.email }}</span>
           </a>
           {% else %}
           <a class="navbar-brand" href="usuarios/login">
