--- a/EcoWEB/Apps/Usuarios/templates/signup_productor.html
+++ b/EcoWEB/Apps/Usuarios/templates/signup_productor.html
@@ -1,17 +1,141 @@
-<!-- templates/sign_up.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign Up</title>
+    <!-- Basic -->
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <!-- Mobile Metas -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <!-- Site Metas -->
+    <meta name="keywords" content="" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <title>LOGIN</title>
+    <!-- slider stylesheet -->
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css" />
+    <!-- bootstrap core css -->
+    <link rel="stylesheet" type="text/css" href="/../static/css/bootstrap.css"/>
+    <!-- fonts style -->
+    <link href="https://fonts.googleapis.com/css?family=Dosis:400,500|Poppins:400,700&display=swap" rel="stylesheet">
+    <!-- Custom styles for this template -->
+    <link href="/../static/css/style.css" rel="stylesheet" />
+    <!-- responsive style -->
+    <link href="/../static/css/responsive.css" rel="stylesheet" />
+    <style>
+        /* Estilos para el formulario de inicio de sesión */
+        body, html {
+            height: 100%; 
+            margin: 0;
+            font-family: Arial, sans-serif;
+        }
+
+        .container_signup {
+            background-color: #f6f8f7;
+            height: 100vh; 
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .sign_up_form {
+            width: 100%;
+            padding: 20px;
+            margin: 300px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            background-color: #f6f8f7;
+        }
+
+        .sign_up_form h2 {
+            text-align: center;
+            margin-bottom: 20px;
+            color: #023b48;
+        }
+
+        .sign_up_form input[type="text"],
+        .sign_up_form input[type="password"],
+        .sign_up_form button[type="submit"] {
+            width: calc(100% - 22px); 
+            padding: 10px;
+            margin-bottom: 20px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            box-sizing: border-box; 
+        }
+
+        .sign_up_form button[type="submit"] {
+            background-color: #3d8a4f;
+            color: #ffffff;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        .sign_up_form button[type="submit"]:hover {
+            background-color: #2c6b3a; 
+        }
+
+        .btn {
+            width: calc(100% - 22px); 
+            padding: 10px;
+            margin-bottom: 20px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            box-sizing: border-box; 
+            background-color: #3d8a4f;
+            color: #ffffff;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        .btn:hover {
+            background-color: #2c6b3a; 
+        }
+
+        /* footer section*/
+
+        .footer_section_signup {
+        background-color: #fbfdfd;
+        padding: 20px;
+        font-weight: 500;
+        }
+
+        .footer_section_signup p {
+        color: #292929;
+        margin: 0;
+        text-align: center;
+        }
+
+        .footer_section_signup a {
+        color: #292929;
+        }
+
+        /* end footer section*/
+
+    </style>
 </head>
 <body>
-    <h2>Regístrate en esta maravillosa web</h2>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Sign Up</button>
-    </form>
+    <div class="container_signup">
+        <div class="sign_up_form">
+            <h2>Registro para Productores y Distribuidores</h2>
+            <form method="post">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <button type="submit">Registrar</button> 
+                {% if user.is_authenticated %}
+                <a href="/usuarios/signup/logout" class="btn">Salir de la cuenta de {{user.username}}</a>
+                {% else %}
+                {% load socialaccount %}
+                <a href="/accounts/google/login/?next=/usuarios/firebase_register/" class="btn">Registrar con Google</a>
+                {% endif %}
+            </form>
+        </div>
+    </div>
+    <!-- footer section -->
+    <section class="container-fluid footer_section_signup">
+        <p>
+        &copy;  2024 MARKETECO - Universidad de Sevilla </a>
+        </p>
+    </section>
+    <!-- footer section -->
 </body>
 </html>
