--- a/EcoWEB/Apps/Usuarios/templates/password_reset_form.html
+++ b/EcoWEB/Apps/Usuarios/templates/password_reset_form.html
@@ -120,6 +120,7 @@
     <div class="container_login">
         <div class="login_form">
             <h2>Restablecer Contraseña</h2>
+            <p>Recuerde que para reestablecer su contraseña debe haber sido registrado a través del método común y no mediante Google. En ese caso, contacte con <a href="mailto:info@marketeco.shop">info@marketeco.shop</a></p>
             <form method="post">
                 {% csrf_token %}
                 {{ form.as_p }}
