--- a/EcoWEB/Apps/Usuarios/templates/perfil_prod.html
+++ b/EcoWEB/Apps/Usuarios/templates/perfil_prod.html
@@ -117,6 +117,7 @@
             <p><strong>Nombre:</strong> {{ user.nombre }}</p>
             <p><strong>Apellidos:</strong> {{ user.apellidos }}</p>
             <p><strong>Email:</strong> {{ user.email }}</p>
+            <p><strong>CIF/NIF:</strong> {{ user.cif }}</p>
             <p><strong>Dirección:</strong> {{ user.direccion }}</p>
             <p><strong>Teléfono:</strong> {{ user.telefono }}</p>
             <p><strong>Fecha de Alta:</strong> {{ user.fecha_alta }}</p>
@@ -129,7 +130,8 @@
                 {% endif %}
             </p>
             
-            <a href="{% url 'edit_profile' %}" class="btn">Editar Perfil</a>
+            
+            <a href="{% url 'edit_profile_prod' %}" class="btn">Editar Perfil Prod</a>
             
             <div class="button_group">
                 <a href="/" class="btn btn_back">Volver a Inicio</a>
