--- a/EcoWEB/Apps/Usuarios/templates/password_reset_complete.html
+++ b/EcoWEB/Apps/Usuarios/templates/password_reset_complete.html
@@ -30,7 +30,7 @@
                 font-family: Arial, sans-serif; /* Usa una fuente genérica */
             }
     
-            .container_login {
+            .container_items {
                 background-color: #f6f8f7;
                 height: 100vh; 
                 display: flex;
@@ -38,41 +38,10 @@
                 align-items: center;
             }
     
-            .login_form {
-                width: 100%;
-                padding: 20px;
-                margin: 300px;
-                border: 1px solid #ddd;
-                border-radius: 5px;
-                background-color: #f6f8f7;
-            }
-    
-            .login_form h2 {
+            .items h2 {
                 text-align: center;
                 margin-bottom: 20px;
                 color: #023b48;
-            }
-    
-            .login_form input[type="text"],
-            .login_form input[type="password"],
-            .login_form button[type="submit"] {
-                width: calc(100% - 22px); 
-                padding: 10px;
-                margin-bottom: 20px;
-                border: 1px solid #ddd;
-                border-radius: 5px;
-                box-sizing: border-box; 
-            }
-    
-            .login_form button[type="submit"] {
-                background-color: #3d8a4f;
-                color: #ffffff;
-                cursor: pointer;
-                transition: background-color 0.3s ease;
-            }
-    
-            .login_form button[type="submit"]:hover {
-                background-color: #2c6b3a; 
             }
     
             .btn {
@@ -90,6 +59,10 @@
     
             .btn:hover {
                 background-color: #2c6b3a; 
+            }
+
+            .center-text {
+            text-align: center;
             }
     
     
@@ -114,11 +87,20 @@
             /* end footer section*/
     
         </style>
+        <script>
+            // Función para redirigir después de 5 segundos
+            function redirectAfterDelay() {
+                setTimeout(function() {
+                    window.location.href = "/usuarios/login";
+                }, 8000); // 8000 milisegundos = 9 segundos
+            }
+        </script>
 </head>
-<body>
-    <div class="container_login">
-        <div class="login_form">
-            <p>
+<body onload="redirectAfterDelay()">
+    <div class="container_items">
+        <div class="items">
+            <h2>Contraseña reestablecida</h2>
+            <p class="center-text">
                 Tu contraseña ha sido reestablecida. <a href="{% url 'login' %}">Entra en tu perfil</a> ahora.
             </p>
         </div>
