--- a/EcoWEB/Apps/Usuarios/templates/password_reset_confirm.html
+++ b/EcoWEB/Apps/Usuarios/templates/password_reset_confirm.html
@@ -119,16 +119,16 @@
     <div class="container_login">
         <div class="login_form">
             {% if validlink %}
-            <h3>Change password</h3>
+            <h2>Cambio de contraseña</h2>
             <form method="post">
               {% csrf_token %}
               {{ form.as_p }}
-              <button type="submit">Change password</button>
+              <button type="submit">Cambiar contraseña</button>
             </form>
             {% else %}
                 <p>
-                The password reset link was invalid, possibly because it has already been used.
-                Please request a new password reset.
+                El link de reestablecimiento de la contraseña es inválido, posiblemente ya haya sido usado. <br>
+                Por favor, solicite un nuevo cambio de contraseña. Si el problema persiste, póngase en contacto con <a href="mailto:info@marketeco.shop">info@marketeco.shop</a>.
             {% endif %}
             </p>
         </div>
