--- a/EcoWEB/Apps/Usuarios/templates/password_reset_done.html
+++ b/EcoWEB/Apps/Usuarios/templates/password_reset_done.html
@@ -30,50 +30,13 @@
             font-family: Arial, sans-serif; /* Usa una fuente genérica */
         }
 
-        .container_login {
+        .container_items {
             background-color: #f6f8f7;
             height: 100vh; 
             display: flex;
             justify-content: center;
             align-items: center;
         }
-/* 
-        .login_form {
-            width: 100%;
-            padding: 20px;
-            margin: 300px;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            background-color: #f6f8f7;
-        }
-
-        .login_form h2 {
-            text-align: center;
-            margin-bottom: 20px;
-            color: #023b48;
-        }
-
-        .login_form input[type="text"],
-        .login_form input[type="password"],
-        .login_form button[type="submit"] {
-            width: calc(100% - 22px); 
-            padding: 10px;
-            margin-bottom: 20px;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            box-sizing: border-box; 
-        }
-
-        .login_form button[type="submit"] {
-            background-color: #3d8a4f;
-            color: #ffffff;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
-
-        .login_form button[type="submit"]:hover {
-            background-color: #2c6b3a; 
-        } */
 
         .btn {
             width: calc(100% - 22px); 
@@ -88,8 +51,18 @@
             transition: background-color 0.3s ease;
         }
 
+        .items h2 {
+            text-align: center;
+            margin-bottom: 20px;
+            color: #023b48;
+        }
+
         .btn:hover {
             background-color: #2c6b3a; 
+        }
+
+        .center-text {
+            text-align: center;
         }
 
 
@@ -118,16 +91,20 @@
         // Función para redirigir después de 5 segundos
         function redirectAfterDelay() {
             setTimeout(function() {
-                window.location.href = "/usuarios/login";
+                // window.location.href = "/usuarios/login";
+                window.location.href = "/usuarios/signup/logout/?next=/usuarios/login";
             }, 4000); // 4000 milisegundos = 4 segundos
         }
     </script>
 </head>
 <body onload="redirectAfterDelay()">
-    <div class="container_login">
-            <p>
-                Se ha enviado un email para reestablecer la contraseña. Revisa tu buzón de correo.
+    <div class="container_items">
+        <div class="items">
+            <h2>Revisa tu correo</h2>
+            <p class="center-text">
+                Se ha enviado un email para reestablecer tu contraseña. Revisa tu buzón de correo.
             </p>
+        </div>
     </div>
       <!-- footer section -->
     <section class="container-fluid footer_section_login">
