--- a/EcoWEB/Apps/Usuarios/templates/edit_profile.html
+++ b/EcoWEB/Apps/Usuarios/templates/edit_profile.html
@@ -49,6 +49,12 @@
         background-color: #f6f8f7;
     }
 
+    .perfil_form h1 {
+        text-align: center;
+        margin-bottom: 20px;
+        color: #023b48;
+    }
+
     .perfil_form h2 {
         text-align: center;
         margin-bottom: 20px;
@@ -84,27 +90,6 @@
             justify-content: center;
         }
 
-
-    /* footer section*/
-
-    .footer_section_perfil {
-    background-color: #fbfdfd;
-    padding: 20px;
-    font-weight: 500;
-    }
-
-    .footer_section_perfil p {
-    color: #292929;
-    margin: 0;
-    text-align: center;
-    }
-
-    .footer_section_perfil a {
-    color: #292929;
-    }
-
-    /* end footer section*/
-
 </style>
 </head>
 <body>
@@ -131,7 +116,7 @@
     </div>
 
         <!-- footer section -->
-        <section class="container-fluid footer_section_perfil">
+        <section class="container-fluid footer_section">
             <p>
             &copy;  2024 MARKETECO - Universidad de Sevilla </a>
             </p>
