--- a/EcoWEB/Apps/Usuarios/templates/index.html
+++ b/EcoWEB/Apps/Usuarios/templates/index.html
@@ -560,7 +560,7 @@
             </div>
             <div class="detail-box">
               <p>
-                Location
+                Ubicación
               </p>
             </div>
           </div>
@@ -572,7 +572,7 @@
             </div>
             <div class="detail-box">
               <p>
-                +02 1234567890
+                Instagram
               </p>
             </div>
           </div>
@@ -584,7 +584,7 @@
             </div>
             <div class="detail-box">
               <p>
-                demo@gmail.com
+                info@marketeco.shop
               </p>
             </div>
           </div>
@@ -594,14 +594,6 @@
   </section>
 
   <!-- end info_section -->
-
-  <!-- footer section -->
-  <section class="container-fluid footer_section">
-    <p>
-      &copy;  2024 MARKETECO - Universidad de Sevilla </a>
-    </p>
-  </section>
-  <!-- footer section -->
 
   <script>
     // Mostrar el popup con SweetAlert
