--- a/EcoWEB/static/css/style.scss
+++ b/EcoWEB/static/css/style.scss
@@ -447,7 +447,7 @@ a:focus {
       }
 
       &.box-2 {
-        background-image: url(../images/telephone-white.png);
+        background-image: url(../images/instagram-white.png);
       }
 
       &.box-3 {
