--- a/EcoWEB/Apps/Usuarios/templates/products.html
+++ b/EcoWEB/Apps/Usuarios/templates/products.html
@@ -1,125 +1,193 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Basic -->
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <!-- Mobile Metas -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <!-- Site Metas -->
-    <meta name="keywords" content="" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
     <title>PRODUCTOS</title>
-    <!-- slider stylesheet -->
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css" />
-    <!-- bootstrap core css -->
     <link rel="stylesheet" type="text/css" href="/../static/css/bootstrap.css"/>
-    <!-- fonts style -->
     <link href="https://fonts.googleapis.com/css?family=Dosis:400,500|Poppins:400,700&display=swap" rel="stylesheet">
-    <!-- Custom styles for this template -->
     <link href="/../static/css/style.css" rel="stylesheet" />
-    <!-- responsive style -->
     <link href="/../static/css/responsive.css" rel="stylesheet" />
-    <!-- SweetAlert -->
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
     <style>
-        /* Estilos para el formulario de perfil */
         body, html {
             height: 100%; 
             margin: 0; 
             font-family: Arial, sans-serif; 
-            justify-content: center;
-            align-items: center;
         }
 
-        .container_perfil {
+        .container_productos {
             background-color: #f6f8f7;
-            height: 100vh; 
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .perfil_form {
-            width: 100%;
             padding: 20px;
-            margin: 300px;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            background-color: #f6f8f7;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
 
-        .perfil_form h2 {
+        .product-item {
+            background-color: #ffffff;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            overflow: hidden;
             text-align: center;
-            margin-bottom: 20px;
-            color: #023b48;
+            margin: 10px;
+            padding: 20px;
         }
 
-        .btn {
-            width: calc(100% - 22px); 
-            padding: 10px;
-            margin: 20px;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            box-sizing: border-box; 
+        .product-item img {
+            width: 100%;
+            height: auto;
+            display: block;
+        }
+
+        .product-item button {
+            margin-top: 10px;
+            padding: 10px 20px;
             background-color: #3d8a4f;
             color: #ffffff;
+            border: none;
+            border-radius: 5px;
             cursor: pointer;
             transition: background-color 0.3s ease;
         }
 
-        .btn:hover {
+        .product-item button:hover {
             background-color: #2c6b3a; 
         }
 
-        .button_group {
+        .products-grid {
             display: flex;
+            flex-wrap: wrap;
             justify-content: center;
         }
 
-        /* footer section */
-        .footer_section_perfil {
-            background-color: #fbfdfd;
-            padding: 20px;
-            font-weight: 500;
+        .products-grid .product-item {
+            flex: 0 0 calc(33.333% - 20px);
+            margin: 10px;
         }
 
-        .footer_section_perfil p {
-            color: #292929;
-            margin: 0;
-            text-align: center;
+        .btn {
+        width: calc(100% - 22px); 
+        padding: 10px;
+        margin: 20px;
+        border: 1px solid #ddd;
+        border-radius: 5px;
+        box-sizing: border-box; 
+        background-color: #3d8a4f;
+        color: #ffffff;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
         }
 
-        .footer_section_perfil a {
-            color: #292929;
+        .btn_pass{
+        border: 1px solid #ddd;
+        background-color: #3d6f8a;
+        color: #ffffff;
+
         }
 
-        /* end footer section */
+        .hidden {
+            display: none;
+        }
 
+        .edit-form input[type="text"],
+        .edit-form textarea,
+        .edit-form input[type="checkbox"] {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 10px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            box-sizing: border-box;
+        }
+
+        @media (max-width: 768px) {
+            .products-grid .product-item {
+                flex: 0 0 calc(50% - 20px);
+            }
+        }
+
+        @media (max-width: 480px) {
+            .products-grid .product-item {
+                flex: 0 0 calc(100% - 20px);
+            }
+        }
     </style>
+
+    <script>
+        function toggleEdit(productId) {
+            const imgElement = document.getElementById(`img-${productId}`);
+            const formElement = document.getElementById(`form-${productId}`);
+
+            if (imgElement.classList.contains('hidden')) {
+                imgElement.classList.remove('hidden');
+                formElement.classList.add('hidden');
+            } else {
+                imgElement.classList.add('hidden');
+                formElement.classList.remove('hidden');
+            }
+        }
+    </script>
+
 </head>
 <body>
-    <div class="container_perfil">
-        <h1>Lista de Productos</h1>
-        <div class="perfil_form">
-            {% if productos %}
-                <ul>
-                    {% for producto in productos %}
-                        <li>
-                            <h2>{{ producto.id }}</h2>
-                            <h2>{{ producto.nombre }}</h2>
-                            <p><strong>Descripción:</strong> {{ producto.descripcion }}</p>
-                            <p><strong>Precio:</strong> {{ producto.precio }}</p>
-                            <p><strong>Categoría:</strong> {{ producto.categoria }}</p>
-                            <p><strong>Disponibilidad:</strong> {% if producto.disponibilidad %} Disponible {% else %} No Disponible {% endif %}</p>
-                        </li>
-                    {% endfor %}
-                </ul>
-            {% else %}
-                <p>No se encontraron productos para este usuario.</p>
-            {% endif %}
+    <div class="container_productos">
+        <h2>Mis Productos</h2>
+        <div class="products-grid">
+            <a href="{% url 'add_product' %}" class="btn btn_pass">Añadir producto</a>
+            {% for producto in productos %}
+                <div class="product-item">
+                    <div id="img-{{ producto.id }}">
+                        <img src="{% if producto.imagenes %}{{ producto.imagenes.0 }}{% else %}https://dummyimage.com/420x260{% endif %}" alt="{{ producto.nombre }}">
+                        <h3>{{ producto.nombre }}</h3>
+                        <p>{{ producto.descripcion }}</p>
+                        <p>{{ producto.precio }}€</p>
+                        <button onclick="toggleEdit('{{ producto.id }}')">Editar</button>
+                    </div>
+                    <div id="form-{{ producto.id }}" class="hidden">
+                        <form method="post" action="{% url 'edit_product' producto.id %}" class="edit-form bg-white p-4 rounded">
+                            {% csrf_token %}
+                            <div class="mb-2">
+                                <label for="nombre" class="block text-sm font-medium text-gray-700">Nombre</label>
+                                <input type="text" name="nombre" value="{{ producto.nombre }}" class="mt-1 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+                            </div>
+                            <div class="mb-2">
+                                <label for="descripcion" class="block text-sm font-medium text-gray-700">Descripción</label>
+                                <textarea name="descripcion" class="mt-1 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">{{ producto.descripcion }}</textarea>
+                            </div>
+                            <div class="mb-2">
+                                <label for="precio" class="block text-sm font-medium text-gray-700">Precio (€)</label>
+                                <input type="number"  step="0.01" name="precio" value="{{ producto.precio }}" class="mt-1 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+                            </div>
+                            <div class="mb-2">
+                                <label for="stock" class="block text-sm font-medium text-gray-700">Unidades</label>
+                                <input type="number" name="stock" value="{{ producto.stock }}" class="mt-1 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+                            </div>
+                            <div class="mb-2">
+                                <label for="categoria" class="block text-sm font-medium text-gray-700">Categoría</label>
+                                <input type="text" name="categoria" value="{{ producto.categoria }}" class="mt-1 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+                            </div>
+                            <div class="mb-2">
+                                <label for="disponibilidad" class="block text-sm font-medium text-gray-700">Disponible</label>
+                                <input type="checkbox" name="disponibilidad" {% if producto.disponibilidad %}checked{% endif %} class="mt-1 block shadow-sm sm:text-sm border-gray-300 rounded-md">
+                            </div>
+                            <button type="submit" class="mt-4 bg-blue-500 text-white px-4 py-2 rounded">Guardar</button>
+                            <button type="button" onclick="toggleEdit('{{ producto.id }}')" class="mt-4 bg-gray-500 text-white px-4 py-2 rounded">Cancelar</button>
+                        </form>
+                    </div>
+                </div>
+            {% endfor %}
         </div>
     </div>
+
+    <!-- footer section -->
+    <section class="container-fluid footer_section">
+        <p>
+        &copy;  2024 MARKETECO - Universidad de Sevilla </a>
+        </p>
+    </section>
+    <!-- footer section -->
+
 </body>
 </html>
